Update docker-compose.yaml 2

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ version: '3'
 services:
     docker-registry:
         container_name: hub.kubernetesway.in
-        image: registry:2
+        image: registry
         ports:
             - 443:443
         environment:
